--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
    "author": "Bitter Buffalo, Alex Schumaker",
-   "browser_action": {
-      "default_icon": "images/icon_16.png"
+   "page_action": {
+      "default_icon": "images/icon_16.png",
+      "default_title": "Toggle Dark Mode"
    },
    "content_scripts": [ {
       "all_frames": true,
