made Dark Mode toggleable by clicking the toolbar button

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
       "default_icon": "images/icon_16.png",
       "default_title": "Toggle Dark Mode"
    },
+   "background": {
+      "scripts":["scripts/background.js"],
+      "persistent": false
+   },
    "content_scripts": [ {
       "all_frames": true,
       "css": [ "styles/style.css" ],
@@ -21,5 +25,9 @@
    "manifest_version": 2,
    "name": "FunimationFeatures",
    "version": "1.0",
-   "web_accessible_resources": [ "scripts/inject.js" ]
+   "web_accessible_resources": [ "scripts/inject.js" ],
+   "permissions":[
+      "tabs",
+      "declarativeContent"
+   ]
 }
