--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,8 @@
    "web_accessible_resources": [ "scripts/inject.js" ],
    "permissions":[
       "tabs",
-      "declarativeContent"
+      "declarativeContent",
+      "webNavigation",
+      "storage"
    ]
 }
