--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,20 @@
       "scripts":["scripts/background.js"],
       "persistent": false
    },
-   "content_scripts": [ {
-      "all_frames": true,
-      "css": [ "styles/style.css" ],
-      "js": [ "scripts/script.js" ],
-      "matches": [ "https://www.funimation.com/shows/*", "http://www.funimation.com/shows/*", "https://www.funimation.com/player/*", "http://www.funimation.com/player/*" ]
-   } ],
+   "content_scripts": [ 
+      {
+         "all_frames": true,
+         "css": [ "styles/style.css" ],
+         "js": [ "scripts/script.js" ],
+         "matches": [ "https://www.funimation.com/shows/*", "http://www.funimation.com/shows/*", "https://www.funimation.com/player/*", "http://www.funimation.com/player/*" ]
+      },
+      {
+         // "css": [ "styles/DarkMode.css" ],
+         "js": [ "scripts/DarkMode.js"],
+         "matches": [ "https://www.funimation.com/*" ],
+         "run_at": "document_end"
+      }
+   ],
    "description": "Successor to FunimationFix by Bitter Buffalo. Brings essential keybinds to Funimation's lackluster player, DarkMode style to video pages, and auto-resizing",
    "homepage_url": "http://www.cobblers.net/#software",
    "icons": {
@@ -28,6 +36,7 @@
    "web_accessible_resources": [ "scripts/inject.js" ],
    "permissions":[
       "tabs",
-      "declarativeContent"
+      "declarativeContent",
+      "storage"
    ]
 }
