--- a/manifest.json
+++ b/manifest.json
@@ -13,10 +13,9 @@
          "all_frames": true,
          "css": [ "styles/style.css" ],
          "js": [ "scripts/script.js" ],
-         "matches": [ "https://www.funimation.com/shows/*", "http://www.funimation.com/shows/*", "https://www.funimation.com/player/*", "http://www.funimation.com/player/*" ]
+         "matches": [ "https://www.funimation.com/shows/*", "https://www.funimation.com/player/*"]
       },
       {
-          "css": [ "styles/DarkMode.css" ],
          "js": [ "scripts/DarkMode.js"],
          "matches": [ "https://www.funimation.com/*" ],
          "run_at": "document_end"
